using types provided by operator overload methods when evaluating expressions with operators